--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,6 @@ assets/page_types/*
 assets/page_types/default/*
 !assets/page_types/default/.htaccess
 system/cms/cache/*
+system/cms/config/database.php
 system/cms/logs/log-*.php
 nbproject/
