--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,13 @@
 .project
 .settings
 .idea
+assets/cache/*
+assets/page_types/*
+!assets/page_types/.htaccess
+!assets/page_types/default/
+assets/page_types/default/*
+!assets/page_types/default/.htaccess
+system/cms/cache/*
+system/cms/config/database.php
+system/cms/logs/log-*.php
 nbproject/
