--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignore all cache files
 /assets/cache
 /system/cms/cache
+/assets/cache/*
+/system/cms/cache/*
 /system/cms/config/database.php
 /system/cms/logs/log-*.php
 
